ci: publish code coverage reports to sonarcloud